--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ function createCar(){
   body.beginFill(0xff8800).drawRect(-30,-15,60,30).endFill();
   car.addChild(body);
 
-  const avatar = PIXI.Sprite.from('avatar.png');
+  const avatar = PIXI.Sprite.from('shina.jpeg');
   avatar.anchor.set(0.5);
   avatar.width = 30;
   avatar.height = 30;
