Изменен цвет фона на #3a6f3e в index.html и обновлены параметры фона для канваса.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       padding: 0;
       overflow: hidden;
       background: #222;
+      /* background: #3a6f3e; */
     }
 
     canvas {
@@ -88,7 +89,7 @@
         height: window.innerHeight,
         autoDensity: true,
         resolution: window.devicePixelRatio || 1,
-        backgroundColor: 0x222222
+        backgroundColor: 0x3a6f3e
       });
       document.body.appendChild(app.view);
     }
