--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       WORLD_WIDTH: 3000,
       WORLD_HEIGHT: 2000,
       GRID_STEP: 100,
-      ROAD_SPACING: 400,
+      ROAD_SPACING_H: 540,  // шаг между вертикальными дорогами (6 дорог)
+      ROAD_SPACING_V: 850,  // шаг между горизонтальными дорогами (3 дороги)
+      ROAD_MARGIN: 150,
       ROAD_WIDTH: 48,
       ROAD_LINE_WIDTH: 12,
       DASH_LENGTH: 60,
@@ -50,23 +52,23 @@
         institute: 0xd0f0ff,
       },
       ZONES: {
-        house: { type: 'rect', x: 300, y: 150, w: 220, h: 160, label: 'Дом Шины' },
-        relatives: { type: 'rect', x: 1280, y: 180, w: 440, h: 440, label: 'Родственники' },
-        work: { type: 'rect', x: 1100, y: 1100, w: 260, h: 180, label: 'Работа' },
-        box: { type: 'rect', x: 450, y: 1450, w: 200, h: 160, label: 'Бокс' },
-        institute: { type: 'circle', x: 1700, y: 1600, r: 100, label: 'Институт', alpha: 0.6 },
+        house: { type: 'rect', x: 200, y: 200, w: 440, h: 750, label: 'Дом Шины' },
+        relatives: { type: 'rect', x: 1300, y: 200, w: 440, h: 750, label: 'Родственники' },
+        work: { type: 'rect', x: 1840, y: 1100, w: 440, h: 700, label: 'Работа' },
+        box: { type: 'rect', x: 200, y: 1100, w: 440, h: 700, label: 'Бокс' },
+        institute: { type: 'circle', x: 2550, y: 1425, r: 200, label: 'Институт', alpha: 0.6 },
       },
       TRAFFIC_LIGHTS: [
-        { x: 400, y: 400 },
-        { x: 1600, y: 400 },
-        { x: 1600, y: 1600 },
-        { x: 400, y: 1600 }
+        { x: 690, y: 1000 },
+        { x: 1230, y: 1000 },
+        { x: 1770, y: 1000 },
+        { x: 2310, y: 1000 }
       ],
       CAR_PATH: [
-        { x: 400, y: 400 },
-        { x: 400, y: 1600 },
-        { x: 1600, y: 1600 },
-        { x: 1600, y: 400 }
+        { x: 690, y: 1000 },
+        { x: 1230, y: 1000 },
+        { x: 1770, y: 1000 },
+        { x: 2310, y: 1000 }
       ],
       BASE_FONT: 24
     };
@@ -170,17 +172,32 @@
     }
 
     function drawRoads (layer) {
-      const step = CONFIG.ROAD_SPACING;
+      const margin = CONFIG.ROAD_MARGIN;
 
-      // Определяем самую правую позицию для вертикальных дорог
-      let maxVerticalPos = 0;
-      for (let pos = 0; pos <= CONFIG.WORLD_WIDTH; pos += step) {
-        maxVerticalPos = pos;
+      // Явно задаем позиции для сетки 6x3
+      const horizontalPositions = [];
+      const verticalPositions = [];
+
+      // 3 горизонтальные дороги
+      const availableHeight = CONFIG.WORLD_HEIGHT - 2 * margin;
+      for (let i = 0; i < 3; i++) {
+        const y = margin + (availableHeight / 2) * i;
+        horizontalPositions.push(y);
       }
 
-      // Горизонтальные дороги (исключаем крайние позиции по верху и низу)
-      for (let pos = step; pos <= CONFIG.WORLD_HEIGHT - step; pos += step) {
-        const h = [{ x: step, y: pos }, { x: maxVerticalPos, y: pos }];
+      // 6 вертикальных дорог
+      const availableWidth = CONFIG.WORLD_WIDTH - 2 * margin;
+      for (let i = 0; i < 6; i++) {
+        const x = margin + (availableWidth / 5) * i;
+        verticalPositions.push(x);
+      }
+
+      // Самая правая позиция для трассы
+      const maxVerticalPos = verticalPositions[verticalPositions.length - 1];
+
+      // Рисуем горизонтальные дороги
+      horizontalPositions.forEach(y => {
+        const h = [{ x: verticalPositions[0], y: y }, { x: maxVerticalPos, y: y }];
         const roadH = new PIXI.Graphics();
         roadH.lineStyle(CONFIG.ROAD_WIDTH, CONFIG.COLORS.road, 1);
         roadH.moveTo(h[0].x, h[0].y);
@@ -190,17 +207,17 @@
         dashH.lineStyle(CONFIG.ROAD_LINE_WIDTH, CONFIG.COLORS.roadLine, 1);
         drawDashedPath(dashH, h, CONFIG.DASH_LENGTH, CONFIG.DASH_GAP);
         layer.addChild(dashH);
-      }
+      });
 
-      // Вертикальные дороги (исключаем крайнюю левую позицию)
-      for (let pos = step; pos <= CONFIG.WORLD_WIDTH; pos += step) {
+      // Рисуем вертикальные дороги
+      verticalPositions.forEach(x => {
         let v;
         // Самая правая дорога (трасса) - продолжается за пределы карты
-        if (pos === maxVerticalPos) {
-          v = [{ x: pos, y: 0 }, { x: pos, y: CONFIG.WORLD_HEIGHT }];
+        if (x === maxVerticalPos) {
+          v = [{ x: x, y: 0 }, { x: x, y: CONFIG.WORLD_HEIGHT }];
         } else {
-          // Остальные вертикальные дороги ограничены границами карты
-          v = [{ x: pos, y: step }, { x: pos, y: CONFIG.WORLD_HEIGHT - step }];
+          // Остальные вертикальные дороги ограничены границами дорожной сетки
+          v = [{ x: x, y: horizontalPositions[0] }, { x: x, y: horizontalPositions[horizontalPositions.length - 1] }];
         }
         const roadV = new PIXI.Graphics();
         roadV.lineStyle(CONFIG.ROAD_WIDTH, CONFIG.COLORS.road, 1);
@@ -211,7 +228,7 @@
         dashV.lineStyle(CONFIG.ROAD_LINE_WIDTH, CONFIG.COLORS.roadLine, 1);
         drawDashedPath(dashV, v, CONFIG.DASH_LENGTH, CONFIG.DASH_GAP);
         layer.addChild(dashV);
-      }
+      });
     }
 
     function drawDashedPath (g, points, dash, gap) {
